--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,9 +2,16 @@
 server.port=9898
 zeebe.client.broker.gateway-address=localhost:26500
 zeebe.client.security.plaintext=true
+zeebe.client.cloud.region=London, Europe (europe-west2)
+zeebe.client.cloud.clusterId=2438b392-ea0c-4a84-83f1-c3cca1cb65d0
+zeebe.client.cloud.clientId=QneBpRYOY4r2Mrm~em~0A8-isPFqReha
+zeebe.client.cloud.clientSecret=XMxeSNZg441J6jyeO009S6HWBZSblw3FcBr~7SiydgluOHXeA0ub2VoTwC4Os1-L
+
+
 
 camunda.connector.polling.enabled=true
 camunda.connector.polling.interval=5000
+
 
 operate.client.enabled=true
 
